syntax = "proto3";
package zhanmengao.aihelp.proto;
option  go_package = "github.com/zhanmengao/aihelp/manifest/protobuf/pb";

import "struct.proto";
import "gate.proto";
import "enum.proto";

message GptMessageResponse{
  string id = 1;
  string object = 2;
  int64 created = 3;
  repeated GptChoices choices = 4;
}

message GptChoices{
  int64 index = 1;
    GptMessage message = 2;
}

//获取交流历史
message GetHistoryListReq{
}
message GetHistoryListRsp{
  RspHead Head = 1;
  repeated GptMessage Message = 3;
}

//获取具体信息
message GetChatInfoReq{

}
message GetChatInfoRsp{
  RspHead Head = 1;
}


//书评 / 概要
message 0ReadBookReq{
  string BookName = 1;
}
message ReadBookRsp{
  RspHead Head = 1;
  repeated GptMessage Message = 2;//回复
}


//扮演某些角色
message CosPlayReq{
    CosPlayRole RoleType = 1;
    string RoleDesc = 2;//角色描述
}
message CosPlayRsp{
  RspHead Head = 1;
  repeated GptMessage Message = 2;//回复
}

//继续交流
message ContinueSendReq{
  string SessionID = 1;//对话ID
  string Message = 2;
}
message ContinueSendRsp{
  RspHead Head = 1;
  repeated GptMessage Message = 2;//回复
}

//结束会话
message StopSessionReq{
  string SessionID = 1;//对话ID
}
message StopSessionRsp{
  RspHead Head = 1;
}