package service

import (
	"context"
	"github.com/zhanmengao/aihelp/manifest/protobuf/pb"
)

func (g globalService) GetHistory(ctx context.Context, req *pb.GetHistoryListReq) (*pb.GetHistoryListRsp, error) {
	//TODO implement me
	panic("implement me")
}

func (g globalService) GetChatInfo(ctx context.Context, req *pb.GetChatInfoReq) (*pb.GetChatInfoRsp, error) {
	//TODO implement me
	panic("implement me")
}
